deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smsapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smsapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: smsapp
    spec:
      containers:
        - name: smsapp
          image: kallol7/smsapp:latest
          command: ["/bin/sh", "-c"]
          args:
            - >
              python manage.py migrate &&
              python manage.py collectstatic --noinput &&
              gunicorn mysite.wsgi:application --bind 0.0.0.0:8000
          volumeMounts:
            - name: staticfiles
              mountPath: /usr/src/app/staticfiles
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: smsapp
spec:
  selector:
    app: smsapp
  ports:
    - port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: staticfiles
              mountPath: /var/www/sms/staticfiles
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smsapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
